# smart_zone_client

./: .gitignore  CMakeLists.txt  README.md
inc/: area.h  areawidget.h  camera.h  data.h  drawwidget.h  graphdisplay.h  gststreamthread.h  httpclient.h  mainwindow.h  peoplecount.h  sankeydiagram.h  streamdisplay.h
src/: areawidget.cpp  drawwidget.cpp  graphdisplay.cpp  gststreamthread.cpp  httpclient.cpp  mainwindow.cpp  sankeydiagram.cpp  streamdisplay.cpp
ui/: areawidget.ui  drawwidget.ui  graphdisplay.ui  gststreamthread.ui  mainwindow.ui  streamdisplay.ui
